<resources>
    <string name="app_name">MyWeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="fbutton">Favourites</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_add_favourite">AddFavourite</string>
    <string name="searchCity">Search City...</string>
    <string name="addCity">Search</string>
    <string name="findCity">Add New Favourite</string>
    <string name="API">b5f9daee3a1ffc1a8763111c3744c9d9</string>
    <string name="title_activity_display_city">DisplayCity</string>
</resources>
